apps/oxfmt/tests/snapshots/tests__fixtures__extensions_--check@oxfmt.snap
---
source: apps/oxfmt/tests/tester.rs
---
########## 
arguments: --check
working directory: tests/fixtures/extensions
----------
Checking formatting...

All matched files use the correct format.
Finished in <variable>ms on 11 files using 1 threads.
----------
CLI result: FormatSucceeded
----------
