apps/oxfmt/tests/snapshots/tests__fixtures__multiple_files_--check simple.js arrow.js --check . --check@oxfmt.snap
---
source: apps/oxfmt/tests/tester.rs
---
########## 
arguments: --check simple.js arrow.js
working directory: tests/fixtures/multiple_files
----------
Checking formatting...
arrow.js (<variable>ms)
simple.js (<variable>ms)

Format issues found in above 2 files. Run without `--check` to fix.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatMismatch
----------

########## 
arguments: --check .
working directory: tests/fixtures/multiple_files
----------
Checking formatting...
arrow.js (<variable>ms)
simple.js (<variable>ms)

Format issues found in above 2 files. Run without `--check` to fix.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatMismatch
----------

########## 
arguments: --check
working directory: tests/fixtures/multiple_files
----------
Checking formatting...
arrow.js (<variable>ms)
simple.js (<variable>ms)

Format issues found in above 2 files. Run without `--check` to fix.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatMismatch
----------
