apps/oxfmt/tests/snapshots/tests__fixtures__vcs_dirs_--check@oxfmt.snap
---
source: apps/oxfmt/tests/tester.rs
---
########## 
arguments: --check
working directory: tests/fixtures/vcs_dirs
----------
Checking formatting...
regular_dir/test.js (<variable>ms)
root.js (<variable>ms)

Format issues found in above 2 files. Run without `--check` to fix.
Finished in <variable>ms on 2 files using 1 threads.
----------
CLI result: FormatMismatch
----------
